Fixed blackgroud blurr

--- a/navbar.css
+++ b/navbar.css
@@ -72,7 +72,7 @@ header{
     left: 0;
     position: absolute;
     /*background-color: rgb(93, 53, 53,0.3);*/
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(8px);
     width: 100%;
     height: 100vh;
     display: flex;
